# cryptnox-sdk-esp32

./: .gitignore  .gitmodules  BasicUsage_2config_8template_8h.html  BasicUsage_2config_8template_8h.js  BasicUsage_2config_8template_8h_source.html  BasicUsage_2main_2config_8h.html  BasicUsage_2main_2config_8h.js  BasicUsage_2main_2config_8h__dep__incl.map  BasicUsage_2main_2config_8h__dep__incl.md5  BasicUsage_2main_2config_8h_source.html  BasicUsage_2main_2main_8cpp-example.html  BasicUsage_2main_2main_8cpp.html  BasicUsage_2main_2main_8cpp.js  BasicUsage_2main_2main_8cpp__incl.map  BasicUsage_2main_2main_8cpp__incl.md5  BasicUsage_2main_2main_8cpp_source.html  CMakeLists.txt  COMMERCIAL.md  Connect_2config_8template_8h.html  Connect_2config_8template_8h.js  Connect_2config_8template_8h_source.html  Connect_2main_2config_8h.html  Connect_2main_2config_8h.js  Connect_2main_2config_8h__dep__incl.map  Connect_2main_2config_8h__dep__incl.md5  Connect_2main_2config_8h_source.html  Connect_2main_2main_8cpp-example.html  Connect_2main_2main_8cpp.html  Connect_2main_2main_8cpp.js  Connect_2main_2main_8cpp__incl.map  Connect_2main_2main_8cpp__incl.md5  Connect_2main_2main_8cpp_source.html  ESP32Logger_8cpp.html  ESP32Logger_8cpp.js  ESP32Logger_8cpp__incl.map  ESP32Logger_8cpp__incl.md5  ESP32Logger_8cpp_source.html  ESP32Logger_8h.html  ESP32Logger_8h.js  ESP32Logger_8h__dep__incl.map  (+500 more)
.github/workflows/: doxygen.yml  misra_check.yml
components/cryptnox_sdk_cpp/: .gitignore  CMakeLists.txt  COMMERCIAL.md  CW_CryptoProvider.h  CW_Defs.h  CW_Logger.h  CW_NfcTransport.h  CW_Platform.h  CW_SecureChannel.cpp  CW_SecureChannel.h  CW_TrustedKeys.h  CW_Utils.cpp  CW_Utils.h  CryptnoxWallet.cpp  CryptnoxWallet.h  NOTICES.md  README.md  platform_compat.h
components/cryptnox_sdk_cpp/.github/workflows/: doxygen.yml  static_analysis.yml
components/cryptnox_sdk_cpp/docs/: Doxyfile
components/cryptnox_sdk_cpp/fuzz/: CMakeLists.txt  fuzz_der.cpp
components/cryptnox_sdk_cpp/fuzz/corpus/: README.md
components/cryptnox_utils/: CMakeLists.txt  CryptnoxUtils.c  esp32_random.cpp
components/crypto_provider/: CMakeLists.txt  esp32_crypto_provider.cpp
components/epaper/: CMakeLists.txt  epaper.c
components/epd/: CMakeLists.txt  epd.c
components/epd/include/: epd.h  (+1 more)
components/esp32_logger/: CMakeLists.txt  ESP32Logger.cpp
components/esp32_platform/: CMakeLists.txt  ESP32Platform.cpp
components/pn532/: CMakeLists.txt  pn532.c
components/pn532_adapter/: CMakeLists.txt  pn532_adapter.cpp
components/pn532_adapter/include/: pn532_adapter.h
components/pn532_nfc_transport/: CMakeLists.txt  Pn532NfcTransport.cpp
components/secure_channel/: CMakeLists.txt
components/secure_channel/test/: CMakeLists.txt  test_cw_secure_channel.cpp
components/uECC/: CMakeLists.txt  uECC_esp32.cpp
docs/: Doxyfile  doxygen-extra.sty  patch_latex.py
docs/architecture/: overview.puml
examples/: README.md
examples/BasicUsage/: CMakeLists.txt  README.md  platformio.ini
examples/Connect/: CMakeLists.txt  Connect.ino  README.md  platformio.ini
examples/Sign/: CMakeLists.txt  README.md  Sign.ino  platformio.ini
examples/UsdcSigning/: CMakeLists.txt  README.md  config.template.h  platformio.ini
examples/UsdcSigning/main/: CMakeLists.txt  eth_rlp.cpp  eth_rlp.h  eth_rpc.cpp  eth_rpc.h  keccak256.cpp  keccak256.h  main.cpp
examples/VerifyPin/: CMakeLists.txt  README.md  VerifyPin.ino  platformio.ini
examples/epaper_hello_world/: CMakeLists.txt
examples/usdc_signing/: CMakeLists.txt  config.template.h  sdkconfig.defaults
examples/usdc_signing/main/: CMakeLists.txt  eth_rpc.cpp  eth_rpc.h  keccak256.cpp  main.cpp
hardware/: back.SLDPRT  back.STL  front.SLDPRT  front.STL
main/: CMakeLists.txt  logo.h  main.c  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+82 more)
test/: CMakeLists.txt  sdkconfig.defaults
test/main/: CMakeLists.txt  main.c
(+21 files in other folders)
